# CpuTimer

./: .gitignore  README.md
.github/workflows/: ci.yml
ci/: build-and-test.sh  clang-tidy.sh  common.sh  format.sh  misc.sh  sanitizer.sh
ci/setup/: requirements.in  requirements.txt  setup.sh
src/: .clang-tidy  CMakeLists.txt  conanfile.py  conanfile.txt
src/benchmarking/: CMakeLists.txt  benchmark.cpp
src/examples/: CMakeLists.txt  main.cpp
src/include/: CpuClock.h  CpuTimer.h
src/test/: CMakeLists.txt  test.cpp  testYolo.cpp  testYoloAbiBreaking.cpp
src/test/include/: DoNotOptimize.h  at_least_matcher.h  test_utils.h
